# spires

./: .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: build.yml
doc/: Makefile  requirements.txt
doc/source/: architecture.md  conf.py  index.rst  install.md  overview.md  packages.md
src/spires/: __init__.py
