[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spires"
description = "SPIReS metapackage: installs the SPIReS snow-retrieval package family"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Niklas Griessbaum" }]
keywords = ["snow", "remote sensing", "SPIRES", "metapackage"]

# Default install (`pip install spires`) pulls the core: the data contract plus
# the inversion engine. Functional add-on packages are opt-in extras below.
dependencies = [
    "spires-contract>=0.1.0",
    "spires-inversion>=0.1.0",
]
dynamic = ["version"]  # version derived from git tags via setuptools_scm

[project.optional-dependencies]
io = ["spires-io>=0.1.0"]
lut = ["spires-lut>=0.1.0"]
r0 = ["spires-r0>=0.1.0"]
postprocess = ["spires-postprocess>=0.1.0"]
# Scale-out batch processing (dask/slurm). Lives in the spires-batch dist and
# is opt-in so heavy backends stay out of a bare `pip install spires`.
batch = ["spires-batch>=0.1.0"]
all = [
    "spires-io>=0.1.0",
    "spires-lut>=0.1.0",
    "spires-r0>=0.1.0",
    "spires-postprocess>=0.1.0",
    "spires-batch>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/SPIReS-Organization/spires"
Repository = "https://github.com/SPIReS-Organization/spires"

# The metapackage owns the `spires` import name and ships a *light* convenience
# layer under src/spires (the single-unit `spires.invert` kernel + CLI). Scale-out
# batch processing lives in the separate `spires-batch` dist, surfaced as the
# `batch` extra below — it never lands in a bare `pip install spires`.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
